# chatto-desktop

./: .gitignore  .mise.toml  README.md  package.json  pnpm-lock.yaml
.github/: release.yml
.github/ISSUE_TEMPLATE/: config.yml  desktop-app.yml
.github/workflows/: build.yml
src/: app.html
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json  mobile.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/routes/: +page.svelte
